[package]
name = "dawa-autocomplete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
once_cell = "1.19.0"
rocket = {version = "0.5.0", features = ["json"]}
serde = "1.0.197"
serde_json = "1.0.114"
tokio = {version = "1.36.0", features = ["rt-multi-thread"] }
