[package]
name = "dawa-autocomplete"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1"
once_cell = "1"
rocket = { version = "0.5", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
env_logger = "*"
log = "*"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
uuid = "1.11.0"

[lib]
proc-macro = true
